Deployment/KUBECTL/DeployNamespace.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: aks-demo-namespace
 labels:
  name: aks-demo-namespace
