Deployment/KUBECTL/DeployFrontendwebapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendwebapp
  namespace: aks-demo
spec:
  selector:
    app: frontendwebapp
    tier: frontendwebapp
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendwebapp
  namespace: aks-demo
spec:
  selector:
    matchLabels:
      app: frontendwebapp
      tier: frontendwebapp
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: frontendwebapp
        tier: frontendwebapp
        track: stable
    spec:
      containers:
      - name: nginx
        image: "mmgitdemoacr.azurecr.io/frontendwebapp:latest"
        resources:
         requests:
          cpu: 100m
          memory: 128Mi
         limits:
          cpu: 250m
          memory: 256Mi
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
