Deployment/KUBECTL/DeployIngressWithTLS.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: myapachehttpdservice
          servicePort: 80
      - path: /frontendwebapp
        backend:
          serviceName: frontendwebapp
          servicePort: 80
      - path: /backendservice
        backend:
          serviceName: backendservice
          servicePort: 80
  tls:
   - hosts:
     - mmgitdemo-aks-dns.southindia.cloudapp.azure.com
     secretName: tls-ingress-secret
